--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,121 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Cormorant+Infant:ital,wght@1,500&display=swap");
+
+
+:root {
+  --home-fs: 14px;
+  --about-fs: 16px;
+  border-radius: 5px;
+  --box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
+  --bg-color: #121212;
+  --text-color: #ffffff;
+  --elements-color: #1e1e1e;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card2{
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
+}
+
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+}
+img{
+  max-width: 100%;
+}
+body{
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: #fafafa;
+}
+
+.test{
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+#style-1::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-color: #121212;
+}
+
+#style-1::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+#style-1::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #c1c1c1;
+  height: 6%;
+}
+
+.favouritesTitle {
+  padding: 1rem;
+}
+
+.grid{
+  display: inline-grid;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 5rem;
+  width: 100%;
+  justify-items: center;
+}
+
+h4{
+  font-weight: 300;
+}
+
+.cardLabel{
+  font-weight: 800;
+  font-size: 16px;
+}
+
+.cardTitle{
+  font-weight: 800;
+}
+.header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 3rem;
+}
+.box{
+	box-shadow: 0 10px 6px -10px gray;
+}
+
+.favouritesContainer{
+  background-color: #fff;
+  width: 30%;
+  height: 100%;
+  border-radius: 5px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
+  padding: 1rem;
+}
+
+@media (max-width: 768px) {
+  .favouritesContainer{
+    display: none;
+  }
+
+  .box{
+    width: 100px;
+  }
+
+  .header{
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 0 0rem 2rem;
+    align-items: start;
+  }
+  #headerSearch{
+      width: 90%;
+      
+  }
+  #headerDropdown{
+    margin: 0;
+    margin-top: 2rem;
+  }
 }
