--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Cormorant+Infant:ital,wght@1,500&display=swap");
-
-
-:root {
-  --home-fs: 14px;
-  --about-fs: 16px;
-  border-radius: 5px;
-  --box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
-  --bg-color: #121212;
-  --text-color: #ffffff;
-  --elements-color: #1e1e1e;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800&display=swap');
 
 .card2{
   box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
@@ -53,6 +42,8 @@ body{
 
 .favouritesTitle {
   padding: 1rem;
+  font-weight: 700;
+  font-size: 24px;
 }
 
 .grid{
@@ -63,18 +54,16 @@ body{
   justify-items: center;
 }
 
-h4{
-  font-weight: 300;
-}
-
 .cardLabel{
-  font-weight: 800;
-  font-size: 16px;
+  font-weight: 600;
+  font-size: 18px;
 }
 
 .cardTitle{
   font-weight: 800;
+  padding-bottom: 1rem;
 }
+
 .header{
   display: flex;
   flex-direction: row;
@@ -92,16 +81,12 @@ h4{
   height: 100%;
   border-radius: 5px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 @media (max-width: 768px) {
   .favouritesContainer{
     display: none;
-  }
-
-  .box{
-    width: 100px;
   }
 
   .header{
@@ -117,5 +102,13 @@ h4{
   #headerDropdown{
     margin: 0;
     margin-top: 2rem;
+  }
+
+  #style-1 {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  #style-1::-webkit-scrollbar {
+    display: none;
   }
 }
