--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,9 @@ Selected Countries Page
 .countryDetails {
   width: 50%;
   height: 100%;
-  padding: 5rem 0 0 10rem;
+  display: flex;
+  flex-direction: column;
+  padding: 2.5% 0 0 7.5%;
   font-size: 18px;
 }
 
@@ -66,18 +68,6 @@ li {
 .secondColumn {
   padding: 0rem 7.5rem;
 }
-/*
-All Countries Page
-*/
-.cardContainer {
-  width: 100%;
-  height: 100%;
-  overflow-y: scroll;
-}
-
-.inputLabel {
-  font-weight: 700;
-}
 
 .borderCountries {
   display: flex;
@@ -100,10 +90,6 @@ All Countries Page
   box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
 }
 
-.router-link {
-  text-decoration: none;
-}
-
 .backBtn {
   background-color: #fff !important;
   color: #000 !important;
@@ -113,6 +99,28 @@ All Countries Page
 
 .arrowIcon {
   margin-right: 0.5rem;
+}
+
+/*
+All Countries Page
+*/
+
+.mpCountriesContainer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 3rem;
+  width: 95%;
+  height: 650px;
+}
+.cardContainer {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.inputLabel {
+  font-weight: 700;
 }
 
 #style-1::-webkit-scrollbar-track {
@@ -138,14 +146,6 @@ All Countries Page
   font-size: 24px;
 }
 
-.grid {
-  display: inline-grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 5rem;
-  width: 100%;
-  justify-items: center;
-}
-
 .cardLabel {
   font-weight: 600;
   font-size: 18px;
@@ -168,8 +168,8 @@ All Countries Page
 }
 
 .favouritesContainer {
-  background-color: #fff;
-  width: 30%;
+  background-color: white;
+  /* width: 25%; */
   height: 100%;
   border-radius: 5px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
@@ -180,16 +180,191 @@ All Countries Page
   display: none;
 }
 
+.whole{
+  display: grid;
+  width: 75%;
+  height: 100%;
+  row-gap:6rem;
+  column-gap:0rem;
+  grid-template-columns: repeat(3, 1fr);
+  overflow-y: auto;
+  justify-items: center;
+  background-color: red;
+}
+
+.each{
+  height: 450px;
+  width: 100%;
+}
+
+.routeL{
+  text-decoration: none;
+  /* width: 75%; */
+}
+
 @media (max-width: 768px) {
-  
-  .favouritesContainer {
-    display: none;
+
+  .mpCountriesContainer{
+    width: 90%;
+    height: 500px;
+    margin: 0 2rem 0 2rem;
   }
+
+  .cardTitle{
+    font-size: 20px !important;
+    height: 60px;
+  }
+
+  .cardLabel{
+    font-size: 16px !important;
+  }
+  .inputValue{
+    font-size: 16px !important;
+  }
+}
+
+@media (max-width: 820px) {
+
+  
+  /* .favouritesContainer{
+    width: 30%;
+  } */
+
+  .mpCountriesContainer{
+    width: 90%;
+    height: 900px;
+    margin: 0 2rem 0 2rem;
+  }
+
+  .starContainer{
+    display: block;
+    float: right;
+    margin: 0 1rem 1rem 0;
+  }
+  
+  .star{
+    color: #e5e5e5;
+  }
+
+  .whole{
+    width: 70%;
+    row-gap:1rem;
+    column-gap:1rem;
+    grid-template-columns: repeat(2, 1fr);
+    margin: auto;
+  }
+
+  .cardTitle{
+    font-size: 20px !important;
+    height: 60px;
+  }
+
+  .cardLabel{
+    font-size: 16px !important;
+  }
+  .inputValue{
+    font-size: 16px !important;
+  }
+}
+
+
+@media (max-width: 912px) {
+
+  .mpCountriesContainer{
+    width: 90%;
+    height: 1100px;
+    margin: 0 2rem 0 2rem;
+  }
+
+  .cardTitle{
+    font-size: 20px !important;
+    height: 60px;
+  }
+
+  .cardLabel{
+    font-size: 16px !important;
+  }
+  .inputValue{
+    font-size: 16px !important;
+  }
+
+  .whole{
+    width: 70%;
+    row-gap:2rem;
+    column-gap:2rem;
+    grid-template-columns: repeat(2, 1fr);
+    margin: auto;
+  }
+
+  .starContainer{
+    display: block;
+    float: right;
+    margin: 0 1rem 1rem 0;
+  }
+  
+}
+
+.star{
+  color: #e5e5e5;
+}
+
+@media (max-width: 280px) {
+  .cardTitle{
+    font-size: 5px !important;
+  }
+
+  .cardLabel{
+    font-size: 12px !important;
+  }
+  .inputValue{
+    font-size: 12px !important;
+  }
+}
+
+@media (max-width: 414px) {
+
+  .whole{
+    width: auto;
+    row-gap:2rem;
+    column-gap:0rem;
+    grid-template-columns: repeat(1, 1fr);
+    margin: auto;
+  }
+
+  .routeL{
+    text-decoration: none;
+    width: 80%;
+  }
+
+  .each{
+    height: 420px;
+    width: 100%;
+  }
+  
+  .mpCountriesContainer{
+    margin-top: 10%;
+    width: auto;
+  }
+
+  .cardTitle{
+    font-size: 20px !important;
+  }
+
+  .cardLabel{
+    font-size: 16px !important;
+  }
+  .inputValue{
+    font-size: 16px !important;
+  }
+
+
+  /* .favouritesContainer {
+    display: none;
+  } */
 
   .header {
     display: flex;
     flex-direction: column;
-    margin: 2rem 0 0rem 2rem;
     align-items: start;
   }
   #headerSearch {
@@ -249,7 +424,7 @@ All Countries Page
   }
   .borderCountriesButton {
     margin: 0rem !important;
-   padding-top: 0.5rem !important;
+   padding-top: 1rem !important;
   }
   .borderBtn {
     margin: 0 !important;
@@ -264,36 +439,27 @@ All Countries Page
   .secondColumn ul > li {
     padding-bottom: 0.2rem;
   }
-
-  /* .cardContainer{
-    width: 95%;
-    display: flex;
-    justify-content: start;
-    margin: auto;
-    background-color: red;
-  } */
-
-  .cardContainer {
-    width: 95% !important;
-    overflow-y: scroll;
-  }
-
-  .grid {
-    display: inline-grid;
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .box {
-    width: 100% !important;
-  }
-
+  
   .starContainer{
     display: block;
     float: right;
     margin: 0 1rem 1rem 0;
   }
-
+  
   .star{
     color: #e5e5e5;
+  }
+  .mainTitle{
+    font-size: 18px !important;
+  }
+
+  .cardContainer {
+    width: 95% !important;
+    overflow-y: scroll;
+    display: flex;
+    justify-content: center;
+  }
+  .card{
+    width: 100% !important;
   }
 }
