--- a/src/index.css
+++ b/src/index.css
@@ -12,116 +12,10 @@ body {
   font-family: "Nunito Sans", sans-serif;
   background-color: #fafafa;
 }
-/*
-Selected Countries Page
-*/
-.detailedCountryContainer {
-  width: 95%;
-  height: 500px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0 3rem 0 3rem;
-}
-
-.flagDiv {
-  width: 50%;
-  height: 100%;
-}
-
-.flagDiv img {
-  width: 100%;
-  height: 100%;
-}
-
-.countryDetails {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 2.5% 0 0 7.5%;
-  font-size: 18px;
-}
-
-.countryName {
-  padding: 0 0 2rem 0;
-  font-size: 2rem;
-  font-weight: 800;
-}
-
-.details {
-  display: flex;
-  justify-content: start;
-}
-
-ul {
-  list-style: none;
-}
-li {
-  margin-bottom: 0.5rem;
-}
-
-.firstColumn ul > li,
-.secondColumn ul > li {
-  padding-bottom: 0.5rem;
-}
-.secondColumn {
-  padding: 0rem 7.5rem;
-}
-
-.borderCountries {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-top: 7.5%;
-}
-
-.borderCountriesButton {
-  display: flex;
-  flex-direction: row;
-}
-
-.borderBtn {
-  margin-left: 5% !important;
-  background-color: white !important;
-  color: black !important;
-  width: auto;
-  height: 30px !important;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
-}
-
-.backBtn {
-  background-color: #fff !important;
-  color: #000 !important;
-  margin: 3rem !important;
-  width: auto;
-}
-
-.arrowIcon {
-  margin-right: 0.5rem;
-}
 
 /*
-All Countries Page
+Scrollbar Styling
 */
-
-.mpCountriesContainer{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 3rem;
-  width: 95%;
-  height: 650px;
-}
-.cardContainer {
-  width: 100%;
-  height: 100%;
-  overflow-y: scroll;
-}
-
-.inputLabel {
-  font-weight: 700;
-}
 
 #style-1::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
@@ -140,326 +34,12 @@ All Countries Page
   height: 6%;
 }
 
-.favouritesTitle {
-  padding: 1rem;
-  font-weight: 700;
-  font-size: 24px;
-}
-
-.cardLabel {
-  font-weight: 600;
-  font-size: 18px;
-}
-
-.cardTitle {
-  font-weight: 800;
-  padding-bottom: 1rem;
-}
-
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin: 3rem;
-}
-.box {
-  box-shadow: 0 10px 6px -10px gray;
-}
-
-.favouritesContainer {
-  background-color: white;
-  /* width: 25%; */
-  height: 100%;
-  border-radius: 5px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
-  padding: 0.5rem;
-}
-
-.starContainer{
-  display: none;
-}
-
-.whole{
-  display: grid;
-  width: 75%;
-  height: 100%;
-  row-gap:6rem;
-  column-gap:0rem;
-  grid-template-columns: repeat(3, 1fr);
-  overflow-y: auto;
-  justify-items: center;
-  background-color: red;
-}
-
-.each{
-  height: 450px;
-  width: 100%;
-}
-
-.routeL{
-  text-decoration: none;
-  /* width: 75%; */
-}
-
-@media (max-width: 768px) {
-
-  .mpCountriesContainer{
-    width: 90%;
-    height: 500px;
-    margin: 0 2rem 0 2rem;
-  }
-
-  .cardTitle{
-    font-size: 20px !important;
-    height: 60px;
-  }
-
-  .cardLabel{
-    font-size: 16px !important;
-  }
-  .inputValue{
-    font-size: 16px !important;
-  }
-}
-
-@media (max-width: 820px) {
-
-  
-  /* .favouritesContainer{
-    width: 30%;
-  } */
-
-  .mpCountriesContainer{
-    width: 90%;
-    height: 900px;
-    margin: 0 2rem 0 2rem;
-  }
-
-  .starContainer{
-    display: block;
-    float: right;
-    margin: 0 1rem 1rem 0;
-  }
-  
-  .star{
-    color: #e5e5e5;
-  }
-
-  .whole{
-    width: 70%;
-    row-gap:1rem;
-    column-gap:1rem;
-    grid-template-columns: repeat(2, 1fr);
-    margin: auto;
-  }
-
-  .cardTitle{
-    font-size: 20px !important;
-    height: 60px;
-  }
-
-  .cardLabel{
-    font-size: 16px !important;
-  }
-  .inputValue{
-    font-size: 16px !important;
-  }
-}
-
-
-@media (max-width: 912px) {
-
-  .mpCountriesContainer{
-    width: 90%;
-    height: 1100px;
-    margin: 0 2rem 0 2rem;
-  }
-
-  .cardTitle{
-    font-size: 20px !important;
-    height: 60px;
-  }
-
-  .cardLabel{
-    font-size: 16px !important;
-  }
-  .inputValue{
-    font-size: 16px !important;
-  }
-
-  .whole{
-    width: 70%;
-    row-gap:2rem;
-    column-gap:2rem;
-    grid-template-columns: repeat(2, 1fr);
-    margin: auto;
-  }
-
-  .starContainer{
-    display: block;
-    float: right;
-    margin: 0 1rem 1rem 0;
-  }
-  
-}
-
-.star{
-  color: #e5e5e5;
-}
-
-@media (max-width: 280px) {
-  .cardTitle{
-    font-size: 5px !important;
-  }
-
-  .cardLabel{
-    font-size: 12px !important;
-  }
-  .inputValue{
-    font-size: 12px !important;
-  }
-}
-
 @media (max-width: 414px) {
-
-  .whole{
-    width: auto;
-    row-gap:2rem;
-    column-gap:0rem;
-    grid-template-columns: repeat(1, 1fr);
-    margin: auto;
-  }
-
-  .routeL{
-    text-decoration: none;
-    width: 80%;
-  }
-
-  .each{
-    height: 420px;
-    width: 100%;
-  }
-  
-  .mpCountriesContainer{
-    margin-top: 10%;
-    width: auto;
-  }
-
-  .cardTitle{
-    font-size: 20px !important;
-  }
-
-  .cardLabel{
-    font-size: 16px !important;
-  }
-  .inputValue{
-    font-size: 16px !important;
-  }
-
-
-  /* .favouritesContainer {
-    display: none;
-  } */
-
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-  }
-  #headerSearch {
-    width: 90%;
-  }
-  #headerDropdown {
-    margin: 0;
-    margin-top: 2rem;
-  }
-
   #style-1 {
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
   #style-1::-webkit-scrollbar {
     display: none;
-  }
-  .detailedCountryContainer {
-    width: auto;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 2rem 2rem 2rem;
-  }
-
-  .backBtn {
-    margin: 2rem 2rem 4rem 2rem !important;
-  }
-
-  .countryDetails {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-  }
-
-  .flagDiv {
-    width: 100%;
-    height: 50%;
-    margin-bottom: 10%;
-  }
-  .details {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-  }
-  .secondColumn {
-    margin-top: 7.5%;
-    padding: 0;
-  }
-
-  .borderCountries {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 7.5%;
-  }
-  .borderCountriesButton {
-    margin: 0rem !important;
-   padding-top: 1rem !important;
-  }
-  .borderBtn {
-    margin: 0 !important;
-    height: 25px !important;
-
-  }
-  .borderBtn:not(:first-child){
-      margin-left: 1rem !important;
-  }
-
-  .firstColumn ul > li,
-  .secondColumn ul > li {
-    padding-bottom: 0.2rem;
-  }
-  
-  .starContainer{
-    display: block;
-    float: right;
-    margin: 0 1rem 1rem 0;
-  }
-  
-  .star{
-    color: #e5e5e5;
-  }
-  .mainTitle{
-    font-size: 18px !important;
-  }
-
-  .cardContainer {
-    width: 95% !important;
-    overflow-y: scroll;
-    display: flex;
-    justify-content: center;
-  }
-  .card{
-    width: 100% !important;
   }
 }
