--- a/src/pages/MainPage/AllCountries.css
+++ b/src/pages/MainPage/AllCountries.css
@@ -30,6 +30,11 @@
   text-decoration: none;
 }
 
+.inputValue{
+  font-size: 18px;
+  padding-bottom: 5px;
+}
+
 @media (max-width: 768px) {
   .cardTitle {
     font-size: 20px !important;
