--- a/src/pages/DetailedPage/SelectedCountry.css
+++ b/src/pages/DetailedPage/SelectedCountry.css
@@ -163,7 +163,7 @@
     }
   }
 
-  @media (min-width:540px) {
+  @media (min-width:540px) and (max-width:910px){
 
     .detailedCountryContainer {
       width: 100%;
@@ -187,14 +187,30 @@
     }
   }
 
-  @media (min-width:910px) {
+  @media (min-width:910px) and (max-width:1100px){
+
+    .detailedCountryContainer {
+      width: 100%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+
+    .countryDetails {
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+    }
 
     .flagDiv {
       width: 90%;
     }
+    
   }
 
-  @media (min-width:1100px) {
+  /* @media (max-width:1100px) and (min-width: 910px){
 
     .detailedCountryContainer {
       width: 95%;
@@ -218,4 +234,4 @@
       padding: 2.5% 0 0 7.5%;
       font-size: 18px;
     }
-  }
+  } */
