--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,3 +1,11 @@
+:root{
+  --header-bg-color:#ffffff;
+}
+
 .box {
-  box-shadow: 0 10px 6px -10px gray;
+  /* box-shadow: 0 10px 6px -10px gray; */
+  background-color: var(--header-bg-color) !important;
+}
+.appBar{
+  background-color: var(--header-bg-color) !important;
 }
