--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800&display=swap");
 
+:root {
+  --bg-color: #fafafa;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 img {
   max-width: 100%;
 }
 body {
   font-family: "Nunito Sans", sans-serif;
-  background-color: #fafafa;
+  background-color: var(--bg-color) !important;
+
 }
 
 /*
