--- a/src/pages/MainPage/AllCountries.css
+++ b/src/pages/MainPage/AllCountries.css
@@ -1,3 +1,8 @@
+:root {
+  --card-bg-color: #ffffff;
+  --favourites-bg-color: #ffffff;
+}
+
 .inputLabel {
   font-weight: 700;
 }
@@ -13,17 +18,50 @@
   font-size: 18px;
 }
 
+.card{
+  background: var( --card-bg-color) !important;
+}
+
 .cardTitle {
   font-weight: 800;
   padding-bottom: 1rem;
 }
 
 .favouritesContainer {
-  background-color: white;
+  background-color: var(--favourites-bg-color) !important;
   height: 100%;
   border-radius: 5px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 30px 0px;
   padding: 0.5rem;
+}
+
+.favouriteItem{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+}
+
+.favouriteItem-LeftContainer{
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  align-items: center;
+}
+
+.favouriteItem-flag{
+  width: 25%;
+  border-radius: 10px;
+  margin-right: 0.5rem;
+}
+
+.favouriteItem-RightContainer{
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  align-items: center;
+  justify-content:flex-end;
 }
 
 .routeL {
