--- a/src/pages/MainPage/AllCountries.css
+++ b/src/pages/MainPage/AllCountries.css
@@ -41,6 +41,7 @@
   flex-direction: row;
   align-items: center;
   padding: 0.5rem 1rem 0.5rem 1rem;
+  cursor: pointer;
 }
 
 .favouriteItem-LeftContainer{
