--- a/src/Components/FiltrationBar/SearchBar.css
+++ b/src/Components/FiltrationBar/SearchBar.css
@@ -1,4 +1,4 @@
-.header {
+.searchBar1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -7,7 +7,7 @@
 }
 
 @media (max-width: 414px) {
-  .header {
+  .searchBar1 {
     display: flex;
     flex-direction: column;
     align-items: start;
