--- a/src/Components/FiltrationBar/SearchBar.css
+++ b/src/Components/FiltrationBar/SearchBar.css
@@ -6,6 +6,14 @@
   margin: 3rem;
 }
 
+#headerSearch{
+  box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2);
+}
+
+#headerDropdown{
+  box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2);
+}
+
 @media (max-width: 414px) {
   .searchBar1 {
     display: flex;
