--- a/src/pages/CountriesPage/CountriesPage.css
+++ b/src/pages/CountriesPage/CountriesPage.css
@@ -22,7 +22,6 @@
 }
 
 .card:hover{
-  /* box-shadow: -1px 10px 29px 0px rgba(0,0,0,0.8) !important; */
   background-color: rgb(202, 202, 202) !important;
 }
 
@@ -37,6 +36,11 @@
   border-radius: 5px;
   box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2);
   padding: 0.5rem;
+}
+
+.favouritesList{
+  height: 90%;
+  overflow-y: scroll;
 }
 
 .favouriteItem{
@@ -57,7 +61,7 @@
 
 .favouriteItem-flag{
   width: 25%;
-  border-radius: 10px;
+  border-radius: 7.5px;
   margin-right: 0.5rem;
 }
 
