--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -15,3 +15,16 @@
 .appBar{
   background-color: var(--header-bg-color) !important;
 }
+.toolBar{
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+
+@media (max-width: 414px) {
+  .mainTitle{
+    font-size: 16px !important;
+  }
+  .darkMode{
+    font-size: 14px !important;
+  }
+}
