--- a/src/pages/CountriesPage/CountriesPage.css
+++ b/src/pages/CountriesPage/CountriesPage.css
@@ -21,10 +21,6 @@
   box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2) !important;
 }
 
-.card:hover{
-  background-color: rgb(202, 202, 202) !important;
-}
-
 .cardTitle {
   font-weight: 800;
   padding-bottom: 1rem;
@@ -39,8 +35,8 @@
 }
 
 .favouritesList{
-  height: 90%;
   overflow-y: scroll;
+  height: calc(100vh - 380px);
 }
 
 .favouriteItem{
@@ -55,20 +51,22 @@
 .favouriteItem-LeftContainer{
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 90%;
   align-items: center;
 }
 
 .favouriteItem-flag{
-  width: 25%;
+  width: 50px;
+  height:30px;
   border-radius: 7.5px;
   margin-right: 0.5rem;
+  object-fit: cover;
 }
 
 .favouriteItem-RightContainer{
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 10%;
   align-items: center;
   justify-content:flex-end;
 }
@@ -77,7 +75,7 @@
   text-decoration: none;
 }
 
-.inputValue{
+.cardDetailedText{
   font-size: 18px;
   padding-bottom: 5px;
 }
@@ -105,7 +103,7 @@
   .cardLabel {
     font-size: 16px !important;
   }
-  .inputValue {
+  .cardDetailedText {
     font-size: 16px !important;
   }
 }
@@ -119,7 +117,7 @@
   .cardLabel {
     font-size: 16px !important;
   }
-  .inputValue {
+  .cardDetailedText {
     font-size: 16px !important;
   }
 }
