--- a/src/pages/CountryDetails/SelectedCountry.css
+++ b/src/pages/CountryDetails/SelectedCountry.css
@@ -1,235 +1,244 @@
 .detailedCountryContainer {
-    width: 95%;
-    height: 500px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0 3rem 0 3rem;
+  width: 95%;
+  height: calc(100vh - 450px);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 3rem 0 3rem;
+  justify-content: space-between;
+}
+
+.flagDiv {
+  width: 45%;
+  height: 100%;
+  object-fit: "cover";
+}
+
+.flagImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover !important;
+}
+
+.countryDetails {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  align-content: center;
+}
+
+.countryName {
+  padding: 0 0 2rem 0;
+  font-size: 2rem;
+  font-weight: 800 !important;
+}
+
+.details {
+  display: flex;
+  justify-content: start;
+}
+
+ul {
+  list-style: none;
+}
+li {
+  margin-bottom: 0.5rem;
+}
+
+.firstColumn ul > li,
+.secondColumn ul > li {
+  padding-bottom: 0.5rem;
+}
+.secondColumn {
+  padding: 0rem 4rem;
+}
+
+.borderCountries {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 7.5%;
+}
+
+.borderCountriesButton {
+  display: flex;
+  flex-direction: row;
+}
+
+.borderBtn {
+  margin-left: 5% !important;
+  width: auto;
+  height: 30px !important;
+  box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2) !important;
+}
+
+.backBtn {
+  margin: 3rem !important;
+  width: auto;
+  box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2) !important;
+}
+
+.arrowIcon {
+  margin-right: 0.5rem;
+}
+
+.inputLabel {
+  font-size: 18px !important;
+  padding-bottom: 5px;
+}
+
+@media (max-width: 414px) {
+  .inputLabel {
+    font-size: 16px !important;
   }
-  
-  .flagDiv {
-    width: 50%;
-    height: 100%;
-    object-fit: "cover";
+
+  .cardTitle {
+    font-size: 20px !important;
   }
-  
-  .flagDiv img {
-    width: 100%;
-    height: 100%;
+
+  .cardLabel {
+    font-size: 16px !important;
   }
-  
-  .countryDetails {
-    width: 50%;
-    height: 100%;
+  .inputValue {
+    font-size: 16px !important;
+  }
+
+  .detailedCountryContainer {
+    width: auto;
+    height: auto;
     display: flex;
     flex-direction: column;
-    padding: 2.5% 0 0 7.5%;
-    font-size: 18px;
+    align-items: center;
+    margin: 0 2rem 2rem 2rem;
   }
-  
-  .countryName {
-    padding: 0 0 2rem 0;
-    font-size: 2rem;
-    font-weight: 800;
+
+  .backBtn {
+    margin: 2rem 2rem 4rem 2rem !important;
   }
-  
+
+  .countryDetails {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+  }
+
+  .flagDiv {
+    width: 100%;
+    height: 50%;
+    margin-bottom: 10%;
+  }
   .details {
     display: flex;
+    flex-direction: column;
     justify-content: start;
   }
-  
-  ul {
-    list-style: none;
-  }
-  li {
-    margin-bottom: 0.5rem;
-  }
-  
-  .firstColumn ul > li,
-  .secondColumn ul > li {
-    padding-bottom: 0.5rem;
-  }
   .secondColumn {
-    padding: 0rem 7.5rem;
+    margin-top: 7.5%;
+    padding: 0;
   }
-  
+
   .borderCountries {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     margin-top: 7.5%;
   }
-  
   .borderCountriesButton {
-    display: flex;
-    flex-direction: row;
+    margin: 0rem !important;
+    padding-top: 1rem !important;
   }
-  
+
   .borderBtn {
-    margin-left: 5% !important;
-    width: auto;
-    height: 30px !important;
-    box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2) !important;
-  }
-  
-  .backBtn {
-    margin: 3rem !important;
-    width: auto;
-    box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2) !important;
-  }
-  
-  .arrowIcon {
-    margin-right: 0.5rem;
+    margin: 0 !important;
+    height: 25px !important;
   }
 
-  .inputValue{
-    font-size: 18px;
-    padding-bottom: 5px;
-  }
-  
-  @media (max-width: 414px) {
-    
-    .cardTitle {
-      font-size: 20px !important;
-    }
-  
-    .cardLabel {
-      font-size: 16px !important;
-    }
-    .inputValue {
-      font-size: 16px !important;
-    }
-
-    .detailedCountryContainer {
-      width: auto;
-      height: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 0 2rem 2rem 2rem;
-    }
-  
-    .backBtn {
-      margin: 2rem 2rem 4rem 2rem !important;
-    }
-  
-    .countryDetails {
-      width: 100%;
-      height: 100%;
-      padding: 0;
-    }
-  
-    .flagDiv {
-      width: 100%;
-      height: 50%;
-      margin-bottom: 10%;
-    }
-    .details {
-      display: flex;
-      flex-direction: column;
-      justify-content: start;
-    }
-    .secondColumn {
-      margin-top: 7.5%;
-      padding: 0;
-    }
-  
-    .borderCountries {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      margin-top: 7.5%;
-    }
-    .borderCountriesButton {
-      margin: 0rem !important;
-      padding-top: 1rem !important;
-    }
-    .borderBtn {
-      margin: 0 !important;
-      height: 25px !important;
-    }
-    .borderBtn:not(:first-child) {
-      margin-left: 1rem !important;
-    }
-  
-    .firstColumn ul > li,
-    .secondColumn ul > li {
-      padding-bottom: 0.2rem;
-    }
-    .mainTitle {
-      font-size: 18px !important;
-    }
+  .borderBtn:not(:first-child) {
+    margin-left: 1rem !important;
   }
 
-  @media (min-width:540px) and (max-width:910px){
-
-    .detailedCountryContainer {
-      width: 100%;
-      height: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 0;
-    }
-
-    .flagDiv {
-      width: 85%;
-      height: 50%;
-      margin-bottom: 5%;
-    }
-
-    .countryDetails {
-      width: 100%;
-      height: 100%;
-      justify-content: center;
-    }
+  .firstColumn ul > li,
+  .secondColumn ul > li {
+    padding-bottom: 0.2rem;
   }
 
-  @media (min-width:910px) and (max-width:1100px){
+  .skltn {
+    margin: 2rem !important;
+  }
+  .skltn-backArr {
+    width: 100px !important;
+  }
+  .skltn-content {
+    width: 100% !important;
+    height: calc(100vh - 220px) !important;
+  }
+}
 
-    .detailedCountryContainer {
-      width: 100%;
-      height: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 0;
-    }
-
-    .countryDetails {
-      width: 100%;
-      height: 100%;
-      justify-content: center;
-    }
-
-    .flagDiv {
-      width: 90%;
-    }
-    
+@media (min-width: 540px) and (max-width: 910px) {
+  .detailedCountryContainer {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
   }
 
-  /* @media (max-width:1100px) and (min-width: 910px){
+  .flagDiv {
+    width: 85%;
+    height: 50%;
+    margin-bottom: 5%;
+  }
 
-    .detailedCountryContainer {
-      width: 95%;
-      height: 500px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      margin: 0 3rem 0 3rem;
-    }
-    
-    .flagDiv {
-      width: 50%;
-      height: 100%;
-    }
+  .countryDetails {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    padding-left: 4rem;
+  }
 
-    .countryDetails {
-      width: 50%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      padding: 2.5% 0 0 7.5%;
-      font-size: 18px;
-    }
-  } */
+  .skltn {
+    margin: 2rem !important;
+  }
+  .skltn-backArr {
+    width: 100px !important;
+  }
+  .skltn-content {
+    width: 100% !important;
+    height: calc(100vh - 220px) !important;
+  }
+}
+
+@media (min-width: 910px) and (max-width: 1100px) {
+  .detailedCountryContainer {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
+
+  .countryDetails {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    padding: 3rem;
+  }
+
+  .flagDiv {
+    width: 90%;
+  }
+
+  .skltn {
+    margin: 2rem !important;
+  }
+  .skltn-backArr {
+    width: 100px !important;
+  }
+  .skltn-content {
+    width: 100% !important;
+    height: calc(100vh - 220px) !important;
+  }
+}
