--- a/src/pages/CountriesPage/CountriesPage.css
+++ b/src/pages/CountriesPage/CountriesPage.css
@@ -1,6 +1,7 @@
 :root {
   --card-bg-color: #ffffff;
   --favourites-bg-color: #ffffff;
+  --box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2);
 }
 
 .inputLabel {
@@ -18,7 +19,7 @@
 
 .card{
   background: var( --card-bg-color) !important;
-  box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2) !important;
+  box-shadow: var(--box-shadow) !important;
 }
 
 .cardTitle {
@@ -30,7 +31,7 @@
   background-color: var(--favourites-bg-color) !important;
   height: 100%;
   border-radius: 5px;
-  box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2);
+  box-shadow: var(--box-shadow) !important;
   padding: 0.5rem;
 }
 
