--- a/src/Components/FiltrationBar/SearchBar.css
+++ b/src/Components/FiltrationBar/SearchBar.css
@@ -1,5 +1,6 @@
 :root{
  --box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2);
+ --dropdown-bg-color: #ffffff;
 }
 .searchBar1 {
   display: flex;
@@ -15,6 +16,7 @@
 
 #headerDropdown{
   box-shadow: var(--box-shadow);
+  background-color: var(--dropdown-bg-color) !important;
 }
 
 @media (max-width: 414px) {
