--- a/src/Components/FiltrationBar/SearchBar.css
+++ b/src/Components/FiltrationBar/SearchBar.css
@@ -2,7 +2,7 @@
  --box-shadow: 0px 2px 5px 0.5px rgba(100, 100, 111, 0.2);
  --dropdown-bg-color: #ffffff;
 }
-.searchBar1 {
+.searchBar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -20,7 +20,7 @@
 }
 
 @media (max-width: 414px) {
-  .searchBar1 {
+  .searchBar {
     display: flex;
     flex-direction: column;
     align-items: start;
